[gd_scene load_steps=23 format=3 uid="uid://c46xpbmkxe4ox"]

[ext_resource type="Script" path="res://Enemies/Bat/bat.gd" id="1_e78dn"]
[ext_resource type="Texture2D" uid="uid://cb7g32csq4n0j" path="res://Enemies/Bat/Bat_Death.png" id="1_y7jwu"]
[ext_resource type="Texture2D" uid="uid://drehjks20og44" path="res://Enemies/Bat/Bat_Fly.png" id="2_loq73"]
[ext_resource type="AudioStream" uid="uid://bxqi315eocpqe" path="res://Enemies/Bat/wings.mp3" id="4_p5ulw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eu1y6"]
atlas = ExtResource("1_y7jwu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2natb"]
atlas = ExtResource("1_y7jwu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4arov"]
atlas = ExtResource("1_y7jwu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ces3l"]
atlas = ExtResource("1_y7jwu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53tr"]
atlas = ExtResource("1_y7jwu")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ybs"]
atlas = ExtResource("1_y7jwu")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwutw"]
atlas = ExtResource("1_y7jwu")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gqgi"]
atlas = ExtResource("1_y7jwu")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl2md"]
atlas = ExtResource("1_y7jwu")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5kle"]
atlas = ExtResource("1_y7jwu")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjdso"]
atlas = ExtResource("1_y7jwu")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vgy6"]
atlas = ExtResource("2_loq73")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eap3e"]
atlas = ExtResource("2_loq73")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_herdf"]
atlas = ExtResource("2_loq73")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iysdo"]
atlas = ExtResource("2_loq73")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_abjgb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu1y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2natb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4arov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ces3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1ybs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwutw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gqgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl2md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5kle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjdso")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vgy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eap3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_herdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iysdo")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ivo4"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bhk4"]
size = Vector2(20, 45.9529)

[node name="Bat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_e78dn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.04, 2.04)
sprite_frames = SubResource("SpriteFrames_abjgb")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(2.12, 2.12)
shape = SubResource("CircleShape2D_6ivo4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 149)
scale = Vector2(27.9559, -8.09524)
shape = SubResource("RectangleShape2D_5bhk4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p5ulw")
volume_db = -16.691
pitch_scale = 2.0
autoplay = true
bus = &"Enemies"
parameters/looping = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
